Add some new info

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <main class="main">
     <section class="section about-us">
       <div class="left-column">
-        <h2>Наша компания займається:</h2>
+        <h2>Наша компанія займається:</h2>
         <ol>
           <li>Запуск м'ясо-переробного підприємства з нуля / від сировини до готового продукту
           </li>
@@ -58,6 +58,7 @@
           <li>Розробка НТД</li>
           <li>Запуск спеціалізованої торгівлі м'ясом</li>
           <li>Розробка іднивідуальних рішень в сфері інгредієнтів</li>
+          <li>Навчання персоналу, стандартизація виробничих процесів відповідно до ISO та НАССР</li>
         </ul>
       </div>
     </section>
