Add fb icon and contact block

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div class="social-link">
           <a href="https://www.instagram.com/chechotenko_vasilii/"><i class="fa-brands fa-instagram" target="_blank"></i></a>
           <a href="https://www.youtube.com/@user-zb8kg2qs5s" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+          <a href="https://www.facebook.com/people/%D0%92%D0%B0%D1%81%D0%B8%D0%BB%D1%8C-%D0%A7%D0%B5%D1%87%D0%BE%D1%82%D0%B5%D0%BD%D0%BA%D0%BE/pfbid02SAtE1yyRRfjNF9w7KQ2XBERjA43SjAZdo4JQaypcVbde73hPkKyZQyHb6HpjxA2sl/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
         </div>
       </nav>
     </div>
@@ -91,12 +92,19 @@
     </section>
     <section id="shop" class="shop">
       <div class="left-column">
-        <h2>Наш магазин на prom:</h2>
+        <h2>Наш магазин на prom та контакти:</h2>
        <p>Відвідайте наш магазин на prom та зробіть замовлення:
-        <a href="https://prom.ua/c3828602-sat.html">Магазин SAT</a>
+        <a href="https://prom.ua/c3828602-sat.html" class="contact-link">Магазин SAT</a>
        </p>
       </div>
-      <div class="right-column"></div>
+    </section>
+    <section id="contacts" class="contacts">
+      <div class="left-column">
+        <h2>Контакти:</h2>
+        <p>Подзвоніть нам: <a href="tel:+380952751833" class="contact-link">+380952751833</a></p>
+        <p>Подзвоніть нам: <a href="tel:+380677481745" class="contact-link">+380677481745</a></p>
+        <p>Зателефонуйте: <a href="mailto:sat_v@ukr.net" class="contact-link">sat_v@ukr.net</a></p>
+      </div>
     </section>
   </main>
   <footer class="footer"></footer>
