--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <h2>Контакти:</h2>
         <p>Подзвоніть нам: <a href="tel:+380952751833" class="contact-link">+380952751833</a></p>
         <p>Подзвоніть нам: <a href="tel:+380677481745" class="contact-link">+380677481745</a></p>
-        <p>Зателефонуйте: <a href="mailto:sat_v@ukr.net" class="contact-link">sat_v@ukr.net</a></p>
+        <p>Напишіть: <a href="mailto:sat_v@ukr.net" class="contact-link">sat_v@ukr.net</a></p>
       </div>
     </section>
   </main>
