Fix translation typo

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <h2>Наш асортимент:</h2>
         <ul>
           <li>Натуральні спеції</li>
-          <li>Вкусо-ароматичні композиції</li>
+          <li>Смако-ароматичні композиції</li>
           <li>Соуси і маринади</li>
           <li>Ароматизатори</li>
           <li>Функціональні препарати </li>
