--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
         <a class="nav-link" href="#assortment">Асортимент</a>
         <a class="nav-link" href="#shop">Наш магазин</a>
         <div class="social-link">
-          <a href="https://www.instagram.com/chechotenko_vasilii/"><i class="fa-brands fa-instagram" target="_blank"></i></a>
+          <a href="https://www.instagram.com/chechotenko_vasilii/"><i class="fa-brands fa-instagram"
+              target="_blank"></i></a>
           <a href="https://www.youtube.com/@user-zb8kg2qs5s" target="_blank"><i class="fa-brands fa-youtube"></i></a>
-          <a href="https://www.facebook.com/people/%D0%92%D0%B0%D1%81%D0%B8%D0%BB%D1%8C-%D0%A7%D0%B5%D1%87%D0%BE%D1%82%D0%B5%D0%BD%D0%BA%D0%BE/pfbid02SAtE1yyRRfjNF9w7KQ2XBERjA43SjAZdo4JQaypcVbde73hPkKyZQyHb6HpjxA2sl/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+          <a href="https://www.facebook.com/people/%D0%92%D0%B0%D1%81%D0%B8%D0%BB%D1%8C-%D0%A7%D0%B5%D1%87%D0%BE%D1%82%D0%B5%D0%BD%D0%BA%D0%BE/pfbid02SAtE1yyRRfjNF9w7KQ2XBERjA43SjAZdo4JQaypcVbde73hPkKyZQyHb6HpjxA2sl/"
+            target="_blank"><i class="fa-brands fa-facebook"></i></a>
         </div>
       </nav>
     </div>
@@ -93,9 +95,9 @@
     <section id="shop" class="shop">
       <div class="left-column">
         <h2>Наш магазин на prom та контакти:</h2>
-       <p>Відвідайте наш магазин на prom та зробіть замовлення:
-        <a href="https://prom.ua/c3828602-sat.html" class="contact-link">Магазин SAT</a>
-       </p>
+        <p>Відвідайте наш магазин на prom та зробіть замовлення:
+          <a href="https://prom.ua/c3828602-sat.html" class="contact-link">Магазин SAT</a>
+        </p>
       </div>
     </section>
     <section id="contacts" class="contacts">
@@ -104,6 +106,17 @@
         <p>Подзвоніть нам: <a href="tel:+380952751833" class="contact-link">+380952751833</a></p>
         <p>Подзвоніть нам: <a href="tel:+380677481745" class="contact-link">+380677481745</a></p>
         <p>Напишіть: <a href="mailto:sat_v@ukr.net" class="contact-link">sat_v@ukr.net</a></p>
+      </div>
+    </section>
+    <section class="">
+      <h2>Сертифікати:</h2>
+      <div class="certifications">
+        <div class="left-column">
+          <img src="./images/certifications/certification-ISO-9001.png" alt="Certificate">
+        </div>
+        <div class="right-column">
+          <img src="./images/certifications/certification-ISO-22000.png" alt="Certificate">
+        </div>
       </div>
     </section>
   </main>
