Fix alt text for burger menu icon image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="logo-block">
         <img src="./images/logo.png" class="logo" alt="SAT logo" />
         <!-- <a href="#menu">
-          <img src="./images/icons/Icon-Burger-menu.png" alt="burger menu icon" />
+          <img src="./images/icons/Icon-Burger-menu.png" alt="burger menu" />
         </a> -->
       </div>
 
